kube/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service-deployment
  namespace: factory
  labels:
    app: front-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
        - name: front-service
          imagePullPolicy: Always
          image: juliantheking/front-service
          ports:
            - containerPort: 8080
