kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service-svc
  namespace: factory
spec:
  selector:
    app: front-service-deployment
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
