kube/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-service-ing
  namespace: factory
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: front-service-svc
                port:
                  number: 8080
            pathType: ImplementationSpecific
            path: /
